--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Plano Cartesiano</title>
 </head>
 <body>
     <div>
-        <div id="res">Resultado:</div>
+        <div>Resultado:</div>
+        <div id="res"></div>
         <input type="number" id="x" placeholder="Ingrese X">
         <input type="number" id="y" placeholder="Ingrese Y">
-        <button id="ing">Ingresar Punto</button>
-        <button id="Cal">Calcular distancia</button>
+        <button id="cal">Calcular distancia/ingresar punto</button>
     </div>
 </body>
+<script src="punto.js"></script>
 <script src="main.js"></script>
 </html>
